Refactor namespace to io.descoped