@@ -3,9 +3,9 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>no.ssb.dc.samples</groupId>
+    <groupId>io.descoped.dc.samples</groupId>
     <artifactId>data-collector-samples</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Data Collector Samples</name>
@@ -15,7 +15,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <module.build.sourceEncoding>UTF-8</module.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.javadoc.skip>true</maven.javadoc.skip>
 
         <slf4j.version>2.0.16</slf4j.version>
@@ -40,6 +41,7 @@
     <scm>
         <connection>scm:git:git://github.com/descoped/data-collector-samples.git</connection>
         <developerConnection>scm:git:git@github.com:descoped/data-collector-samples.git</developerConnection>
+        <url>https://github.com/descoped/data-collector-samples/tree/master</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -54,18 +56,8 @@
     <profiles>
         <profile>
             <id>coverage</id>
-            <properties>
-                <sonar.coverage.jacoco.xmlReportPaths>
-                    ${project.build.outputDirectory}/../site/jacoco/jacoco.xml
-                </sonar.coverage.jacoco.xmlReportPaths>
-            </properties>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>org.sonarsource.scanner.maven</groupId>
-                        <artifactId>sonar-maven-plugin</artifactId>
-                        <version>4.0.0.4121</version>
-                    </plugin>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
@@ -79,24 +71,44 @@
                             </execution>
                             <execution>
                                 <id>report</id>
+                                <phase>prepare-package</phase>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
                             </execution>
                         </executions>
                     </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>sonar</id>
+            <properties>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                <sonar.organization>descoped</sonar.organization>
+                <sonar.projectKey>descoped_${project.artifactId}</sonar.projectKey>
+                <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
+                <sonar.coverage.exclusions/>
+                <sonar.coverage.jacoco.xmlReportPaths>
+                    target/site/jacoco/jacoco.xml
+                </sonar.coverage.jacoco.xmlReportPaths>
+            </properties>
+            <build>
+                <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <!-- Newer version do not yet work with Java 11 -->
-                        <version>3.5.0</version>
-                        <!-- workaround for: https://issues.jboss.org/browse/UNDERTOW-1355 -->
-                        <configuration>
-                            <argLine>
-                                --illegal-access=deny
-                                -Xmx1500m
-                            </argLine>
-                        </configuration>
+                        <groupId>org.sonarsource.scanner.maven</groupId>
+                        <artifactId>sonar-maven-plugin</artifactId>
+                        <version>4.0.0.4121</version>
+                        <executions>
+                            <execution>
+                                <id>sonar</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sonar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
